  * Added new script 'validate_css.rb' which will validate all css files and present a report with 
    a local java binary of the W3C validator.
  * Created an experimental CSS classes plugin, by popular demand. [OFB]
  * Improved handling of multi-line headings. [OFB]
  * Improved styling of <table>s, you may now use .span classes on <th>s to create tables that follow the grid. [OFB]
  * Added support for indented paragraphs to the Fancy-type plugin. [OFB]
  * Added a new plugin: link-icons. [OFB]
  * Seperated the plugins tests into their own file. [OFB]
  * Re-structured some of the tests.html sections. [OFB]
  * Added class ".colborder" to grid.css. [OFB]
  * Added .error, .notice and .success classes to typography.css. [OFB]
  * Added tests for more elements which gets reset in reset.css [OFB, GR]
  * Added forms.css, awaiting implementation. Moved form styling from typography.css [OFB]
  * Updated compressor script to include forms.css [OFB]
	

Version 0.5 - 28/8/2007
--
  * Changed grid width from 14 to 24 columns [OFB]
  * Removed 'first' CSS class and the need to apply it to the first column in a row of columns. [OFB]
  * Reverted to using pixels instead of em units to specify vertical spacing due to baseline issues with 
    all browsers except Firefox. [OFB]
  * New set of default fonts. (Experimental) [OFB]
  * Added test files [OFB]


Version 0.4 - 11/08/2007
--
  * All font sizes and vertical margins are now elastic, through the use of em units. 
    Resizing works great in every tested browser. [OFB]
  * Comes with a new, compressed version of BP, which reduces the size of the core files by 60 percent. [OFB]
  * Support for incremental leading, contributed by Mark Boulton. [OFB]
  * Adds perfected CSS buttons, by Kevin Hale of Particletree fame. [OFB]
  * Fixes all known IE bugs. [OFB]
  * Loads of minor fixes and additions. [OFB]


Initial Release - 03/08/2007
--
  * Initial release of Blueprint
